--- a/corona-virus-tracker/corona-virus-tracker-service/build.gradle
+++ b/corona-virus-tracker/corona-virus-tracker-service/build.gradle
@@ -41,7 +41,10 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//runtimeOnly 'com.h2database:h2'
+	compileOnly 'org.projectlombok:lombok:1.18.12'
+	annotationProcessor 'org.projectlombok:lombok:1.18.12'
+	testCompileOnly 'org.projectlombok:lombok:1.18.12'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	runtimeOnly 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
